syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "cinemaHall.proto";
import "movie.proto";

message MovieSession {
  .Movie movie = 1;
  .CinemaHall cinemaHall = 2;
  google.protobuf.Timestamp showTime = 3;
}
